--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,10 +1,10 @@
 //colors
-$primary-color: #C03A3A;
-$footer: #1E2833;
-$newsletter: #1A1B37;;
+$primary-color: #100E0E;
+$accent: #FF3F3F;
+$color-2: #171515;
+$color-3: #070708;
 $buttons: #FF3F3F;
-$navselected: #FF7474;
-$white: #FAFAFA;
+$white: #fff;
 //color function
 $lighten: 10;
 $darken: 30;
