--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,267 +1,385 @@
-.adv-cards {
-  display: grid;
-  grid-template-columns: repeat(5, 260px);
-  grid-template-rows: 1fr 1fr;
-  text-align: center;
-  justify-content: space-around;
-}
-.adv-cards .whyus-cards {
-  border-radius: 1rem;
-  padding: 1rem;
+html {
+  background-color: #100E0E;
 }
 
-.wait-cards, .arrived-cards {
+.header, .hero, label, .work, .services, .skills, .test, .contact {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+.header, .hero, .services, .skills, .skill-percent, .skill-text, .test, .contact {
   display: flex;
-}
-
-.ncards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 3rem;
-}
-
-.header, .advantages, .hero, .advantages, .flight-schedule, .tracking {
-  padding-left: 8em;
-  padding-right: 8em;
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  padding-left: 8em;
-  padding-right: 8em;
-  padding-top: 2em;
-}
-.header .links {
-  display: inline-flex;
-}
-.header .links .t_nav {
-  display: flex;
-  align-self: center;
-}
-.header .logo {
-  font-size: 50px;
-}
-.header .button-wrapper {
+  padding-left: 15%;
+  padding-right: 15%;
+  height: 10vh;
+  position: relative;
   align-items: center;
-  align-content: center;
-  justify-content: center;
 }
 
 .hero {
-  position: relative;
-  display: flex;
-  height: 70vh;
-  background-color: #C03A3A;
-  color: #FAFAFA;
+  justify-content: space-between;
+  margin-top: 5em;
 }
-.hero .left {
-  width: 38%;
-}
-.hero .left h1 {
+.hero h1 {
   font-size: 4em;
-  padding-top: 1.5em;
-  line-height: 4rem;
+  line-height: 5rem;
 }
-.hero p {
-  padding-top: 1.5em;
-  font-size: 1.3em;
-  padding-right: 6rem;
-}
-.hero .button-hero {
-  margin-top: 3rem;
+.hero .hello {
+  color: #FF3F3F;
 }
 
-.details {
-  margin-top: 1rem;
-  color: grey;
+.zoro {
+  padding-bottom: 2.5em;
+  width: 50%;
 }
 
-.otw {
-  font-size: 1.5em;
-  margin-bottom: 1em;
+.intro {
+  width: 400px;
+}
+.intro .uiux {
+  font-size: 2em;
 }
 
-.h3 {
-  text-align: center;
-  font-size: 1.5rem;
-  padding-bottom: 6rem;
-}
-.h3 h3 {
-  font-size: 3.5rem;
+.bottom-head {
+  display: block;
 }
 
-.top, .bottom {
+.slide {
+  width: 50%;
+  text-align: right;
+}
+.slide .selected, .slide .number {
+  display: inline;
+}
+.slide .selected {
+  font-size: 4em;
+  color: #FF3F3F;
+}
+.slide .arrows {
   display: flex;
-  justify-content: space-around;
-}
-
-.send {
-  font-size: 1.75em;
-}
-
-.num {
-  font-size: 1.25em;
-  color: grey;
-}
-
-.arr {
-  font-size: 1.5em;
-}
-
-.arrows {
-  margin-top: 3rem;
-  margin-left: auto;
-}
-
-.top {
-  padding-bottom: 2rem;
-}
-
-.find-button {
-  text-align: center;
-  margin-top: 4rem;
-}
-
-.icons {
-  margin-right: 1rem;
-  padding-top: 1rem;
-}
-
-.tracking {
-  display: flex;
-  height: 75vh;
-  align-items: center;
-  justify-content: center;
-}
-.tracking p {
-  padding-top: 2em;
-  padding-bottom: 1em;
-}
-.tracking .tracker {
-  width: 500px;
-  margin-left: auto;
-  margin-bottom: 10em;
-}
-.tracking .tracking-input {
-  border: none;
-}
-.tracking .tracker-nav a {
-  color: black;
-  padding-right: 1.25em;
-  padding-bottom: 2em;
-}
-
-.leading {
-  max-width: 600px;
-}
-.leading .lead {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-
-.news {
-  padding-left: 8em;
-  padding-right: 8em;
-  text-align: center;
-}
-.news h2 {
-  font-size: 3em;
-}
-
-.ncards p {
-  margin-bottom: 1em;
-}
-
-.title {
-  margin-bottom: 3em;
-}
-
-.ncards p:first-child {
-  font-weight: bold;
-}
-
-.news-btn {
-  justify-content: center;
-  text-align: center;
-  align-content: center;
-  align-self: center;
-}
-
-.nws-button {
-  margin-top: 1.5rem;
-  margin-bottom: 2rem;
-  text-align: center;
-}
-
-.lets-start {
-  background-color: #1A1B37;
-  color: #FAFAFA;
-  text-align: center;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-.lets-start p {
-  font-size: 3.5em;
-}
-
-.map h2 {
-  font-size: 3.5em;
-  text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-iframe {
-  margin-bottom: 9rem;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.footer {
-  background: #1E2833;
-  padding: 50px;
-}
-
-.footer .footer_menu {
-  display: flex;
-  margin-bottom: 25px;
   justify-content: space-between;
 }
 
-.footer .footer_menu .title {
-  margin-bottom: 10px;
-  color: #adadad;
+label {
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
-.footer .footer_menu ul li a {
-  display: block;
-  margin-bottom: 6px;
-  color: #fff;
-}
-
-.footer .footer_menu ul li a:hover {
-  text-decoration: underline;
-}
-
-.footer .partners {
-  margin-bottom: 25px;
-}
-
-.footer .partners ul {
+.aboutme1 {
+  padding-left: 15%;
+  padding-right: 15%;
   display: flex;
+}
+
+.head {
+  width: 600px;
+  padding-bottom: 1.5em;
+}
+.head h2 {
+  font-size: 2em;
+}
+.head .disc {
+  font-size: 1.2em;
+  padding-bottom: 0.8em;
+}
+.head span {
+  color: #FF3F3F;
+}
+.head .bio {
+  color: grey;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  max-width: 600px;
+  padding-bottom: 2em;
+}
+.info li {
+  padding-bottom: 1em;
+}
+.info .list {
+  display: inline-block;
+  min-width: 120px;
+}
+.info .fact {
+  display: inline-block;
+  padding-left: 1em;
+  color: grey;
+}
+
+.about {
+  padding-left: 4em;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 2em 0;
+}
+
+.port {
+  text-align: center;
+  padding-bottom: 3em;
+  display: block;
+}
+.port li {
+  display: inline;
+  padding-right: 2.7em;
+}
+
+.services {
+  display: flex;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row: 1fr 1fr;
+  text-align: center;
+  grid-gap: 1em 1em;
+}
+
+.card {
+  height: 250px;
+  background-color: #070708;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
+  padding-left: 3em;
+  padding-right: 3em;
+}
+.card h3 {
+  padding-bottom: 1em;
+}
+.card p {
+  color: grey;
+}
+
+.skills {
+  justify-content: space-between;
+}
+.skills .skill-bio {
+  width: 40%;
+  text-align: left;
+}
+.skills h3 {
+  font-size: 2em;
+}
+.skills h3, .skills p {
+  padding-bottom: 1em;
+}
+.skills p {
+  color: grey;
+}
+
+.skill-percent {
+  width: 45%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.skill-percent p {
+  display: inline;
+}
+
+.skill-text {
+  justify-content: space-between;
+}
+
+/* Container for skill bars */
+.container {
+  width: 100%;
+  /* Full width */
+  background-color: rgb(58, 58, 58);
+  /* Grey background */
+}
+
+.skills {
+  padding-bottom: 4px;
+  /* Add bottom padding */
+  color: white;
+  /* White text color */
+}
+
+.html {
+  width: 95%;
+  background-color: #FF3F3F;
+}
+
+/* Green */
+.css {
+  width: 80%;
+  background-color: #FF3F3F;
+}
+
+/* Blue */
+.js {
+  width: 65%;
+  background-color: #FF3F3F;
+}
+
+/* Red */
+.php {
+  width: 60%;
+  background-color: #FF3F3F;
+}
+
+/* Dark Grey */
+.test {
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
+
+.quote-wrapper {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 2em;
+}
+.quote-wrapper p {
+  color: grey;
+}
+
+.who-wrapper p {
+  color: grey;
+  padding-bottom: 0.5em;
+}
+.who-wrapper span {
+  color: #FF3F3F;
+}
+.who-wrapper input {
+  accent-color: #FF3F3F;
+}
+
+.contact {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.touch {
+  display: inline;
+  width: 35%;
+}
+
+form {
+  /* form starting stylings ------------------------------- */
+  /* LABEL ======================================= */
+  /* active state */
+  /* BOTTOM BARS ================================= */
+  /* active state */
+  /* HIGHLIGHTER ================================== */
+  /* active state */
+  /* ANIMATIONS ================ */
+}
+form .group {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  margin-bottom: 45px;
+}
+form input {
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  width: 300px;
+  border: none;
+  border-bottom: 1px solid #757575;
+}
+form input:focus {
+  outline: none;
+}
+form label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+form input:focus ~ label, form input:valid ~ label {
+  top: -20px;
+  font-size: 14px;
+  color: #5264AE;
+}
+form .bar {
+  position: relative;
+  display: block;
+  width: 300px;
+}
+form .bar:before, form .bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #5264AE;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+form .bar:before {
+  left: 50%;
+}
+form .bar:after {
+  right: 50%;
+}
+form input:focus ~ .bar:before, form input:focus ~ .bar:after {
+  width: 50%;
+}
+form .highlight {
+  position: absolute;
+  height: 60%;
+  width: 100px;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
+}
+form input:focus ~ .highlight {
+  -webkit-animation: inputHighlighter 0.3s ease;
+  -moz-animation: inputHighlighter 0.3s ease;
+  animation: inputHighlighter 0.3s ease;
+}
+@-webkit-keyframes inputHighlighter {
+  from {
+    background: #5264AE;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+@-moz-keyframes inputHighlighter {
+  from {
+    background: #5264AE;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+@keyframes inputHighlighter {
+  from {
+    background: #5264AE;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
 }
 
 * {
-  font-family: "Baloo Bhaijaan 2";
+  font-family: "Ubuntu", sans-serif;
 }
 
 /* Box sizing rules */
@@ -283,12 +401,16 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  color: white;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role=list],
-ol[role=list] {
+ul,
+ol,
+li {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Set core root defaults */
@@ -338,187 +460,57 @@ select {
     scroll-behavior: auto !important;
   }
 }
-.t_nav {
-  align-self: flex-end;
-  font-size: 25px;
-}
-.t_nav a {
-  padding-right: 2em;
-  color: black;
-}
-
-a {
-  text-decoration: none;
-}
-
-.button-log, .start {
-  background: #C03A3A;
-  color: #FAFAFA;
-  border-radius: 8px;
-  border: 1px black;
-  padding: 10px 25px;
+.download, .message-me {
+  border: 1px solid #FF3F3F;
+  color: white;
+  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-}
-.button-log:hover, .start:hover {
-  transition: all 0.3s ease;
-}
-.button-log:active, .start:active {
-  background: #C03A3A;
+  font-size: 16px;
 }
 
-.button-hero, .news-btn, .button-create {
-  background: #FAFAFA;
-  color: #C03A3A;
-  border-radius: 8px;
-  border: 1px black;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-}
-.button-hero:hover, .news-btn:hover, .button-create:hover {
-  background: #C03A3A;
-  transition: all 0.3s ease;
-}
-.button-hero:active, .news-btn:active, .button-create:active {
-  background: #C03A3A;
+.logo {
+  background-image: url("../../assets/logo.png");
+  background-size: contain;
+  background-position: center;
+  height: 40px;
+  width: 200px;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
 }
 
-a[href*="#find"] {
-  background: #C03A3A;
-  color: #FAFAFA;
-  border-radius: 8px;
-  border: 1px black;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-}
-a[href*="#find"]:hover {
-  transition: all 0.3s ease;
-}
-a[href*="#find"]:active {
-  background: #C03A3A;
-}
-
-.track-number {
-  background: #C03A3A;
-  color: #FAFAFA;
-  border-radius: 8px;
-  border: 1px black;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-}
-.track-number:hover {
-  transition: all 0.3s ease;
-}
-.track-number:active {
-  background: #C03A3A;
-}
-
-.track-number {
-  border-radius: 5px;
-  background-color: #C03A3A;
-}
-.track-number .svg-icon {
-  width: 1.3em;
-  height: 1.3em;
-}
-.track-number .svg-icon path,
-.track-number .svg-icon polygon,
-.track-number .svg-icon rect {
-  fill: #FAFAFA;
-}
-.track-number .svg-icon circle {
-  stroke: #FAFAFA;
-  stroke-width: 1;
-}
-.track-number svg {
-  display: inline-block;
-  margin: auto;
-}
-
-.images {
-  display: flex;
-  max-width: 50%;
-  align-items: center;
-}
-.images img {
-  border-radius: 20px;
-  margin-right: 1em;
-  margin-bottom: 6rem;
-  margin-top: 3rem;
-}
-.images .img-2 {
-  max-height: 450px;
-  opacity: 0.6;
-}
-.images .img-3 {
-  max-height: 350px;
-  opacity: 0.6;
-}
-
-.svg .svg-icon {
+header svg .svg-icon {
   width: 3em;
   height: 3em;
 }
-.svg .svg-icon path,
-.svg .svg-icon polygon,
-.svg .svg-icon rect {
-  fill: #C03A3A;
+header svg .svg-icon path,
+header svg .svg-icon polygon,
+header svg .svg-icon rect {
+  fill: #100E0E;
 }
-.svg .svg-icon circle {
-  stroke: #C03A3A;
+header svg .svg-icon circle {
+  stroke: #100E0E;
   stroke-width: 1;
 }
 
-.flag-svg {
-  width: 1.5em;
-  height: 1.5em;
-}
-
-.top svg {
-  color: #5656ff;
-  height: 2em;
-  width: 2em;
-}
-
-.bottom svg {
-  color: green;
-  height: 2em;
-  width: 2em;
-}
-
-.arrows .svg-icon {
-  width: 2em;
-  height: 2em;
-}
-.arrows .svg-icon path,
-.arrows .svg-icon polygon,
-.arrows .svg-icon rect {
-  fill: #FAFAFA;
-}
-.arrows .svg-icon circle {
-  stroke: #FAFAFA;
-  stroke-width: 1;
-}
-
-.hero {
-  background-image: url("../../assets/wave.svg");
-  background-repeat: no-repeat;
+.head-shot {
+  background-image: url("../../assets/zoro-pic.png");
+  background-size: contain;
   background-position: center;
-  background-size: cover;
-  width: 100%;
+  height: 500px;
+  width: 400px;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
+}
+
+.projects img {
+  width: 400px;
+  height: 300px;
+}
+
+.head-img {
+  height: 200px;
 }
