--- a/src/sass/home/_reset.scss
+++ b/src/sass/home/_reset.scss
@@ -19,12 +19,16 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  color: white;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul,
+ol,
+li {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Set core root defaults */
