--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -19,7 +19,7 @@ html {
   align-items: center;
 }
 .hero {
-  justify-content: space-between;
+  justify-content: left;
   margin-top: 5em;
   h1 {
     font-size: 4em;
@@ -31,18 +31,16 @@ html {
 }
 .zoro {
   padding-bottom: 2.5em;
-  width: 50%;
+  width: 100%;
 }
-.intro {
-  width: 400px;
-  .uiux {
-    font-size: 2em;
-  }
-}
-.head-img {
-  
-}
-.bottom-head { 
+// .intro {
+//   width: 400px;
+//   .uiux {
+//     font-size: 2em;
+//   }
+// }
+
+.bottom-head {
   display: block;
 }
 .slide {
@@ -68,7 +66,7 @@ label {
 .aboutme1 {
   @include mixins.page;
   display: flex;
-  // justify-content: space-around;
+  justify-content: right;
 }
 .head {
   width: 600px;
@@ -115,220 +113,12 @@ label {
   grid-template-rows: 1fr 1fr;
   grid-gap: 2em 0;
 }
-.port {
-text-align: center;
-padding-bottom: 3em;
-display: block;
-  li {
-    display: inline;
-    padding-right: 2.7em;
-  }
-}
-//serv
-.services {
-  display: flex;
-}
-.cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row: 1fr 1fr;
-  text-align: center;
-  grid-gap: 1em 1em;
-}
-
-.card {
-  // width: 500px;
-  height: 250px;
-  background-color: variables.$color-3;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-left: 3em;
-  padding-right: 3em;
-  h3 {
-    padding-bottom: 1em;
-  }
-  p {
-    color: grey;
-  }
-}
-//skills 
-.skills {
-  justify-content: space-between;
-  .skill-bio {
-    width: 40%;
-    text-align: left;
-  }
-  h3 {
-    font-size: 2em;
-  }
-  h3, p {
-    padding-bottom: 1em;
-  }
-  p {
-    color: grey;
-  }
-}
-.skill-percent {
-  width: 45%;
-  flex-direction: column;
-  justify-content: space-between;
-  p {
-    display: inline;
-  }
-}
-.skill-text {
-  justify-content: space-between;
-}
-
-/* Container for skill bars */
-.container {
-  width: 100%; /* Full width */
-  background-color: rgb(58, 58, 58); /* Grey background */
-}
-
-.skills {
-  padding-bottom: 4px; /* Add bottom padding */
-  color: white; /* White text color */
-}
-
-.html {width: 95%; background-color: variables.$accent;} /* Green */
-.css {width: 80%; background-color: variables.$accent;} /* Blue */
-.js {width: 65%; background-color: variables.$accent;} /* Red */
-.php {width: 60%; background-color: variables.$accent;} /* Dark Grey */
-//quote
-.test {
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-}
-.quote-wrapper {
-  width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 2em;
-  p {
-    color: grey;
-  }
-}
-.who-wrapper {
-  p {
-    color: grey;
-    padding-bottom: .5em;
-  }
-  span {
-    color: variables.$accent;
-  }
-  input {
-    accent-color: variables.$accent;
-  }
-}
-.contact {
-  // display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.touch {
-  display: inline;
-  width: 35%;
-}
-
-form {
-  //input
-  /* form starting stylings ------------------------------- */
-  .group 			  {
-    display: flex;
-    flex-direction: row;
-    position: relative; 
-    margin-bottom:45px; 
-  }
-  input 				{
-    font-size:18px;
-    padding:10px 10px 10px 5px;
-    // display:block;
-    width:300px;
-    border:none;
-    border-bottom:1px solid #757575;
-  }
-  input:focus 		{ outline:none; }
-
-  /* LABEL ======================================= */
-  label 				 {
-    color:#999; 
-    font-size:18px;
-    font-weight:normal;
-    position:absolute;
-    pointer-events:none;
-    left:5px;
-    top:10px;
-    transition:0.2s ease all; 
-    -moz-transition:0.2s ease all; 
-    -webkit-transition:0.2s ease all;
-  }
-
-  /* active state */
-  input:focus ~ label, input:valid ~ label 		{
-    top:-20px;
-    font-size:14px;
-    color:#5264AE;
-  }
-
-  /* BOTTOM BARS ================================= */
-  .bar 	{ position:relative; display:block; width:300px; }
-  .bar:before, .bar:after 	{
-    content:'';
-    height:2px; 
-    width:0;
-    bottom:1px; 
-    position:absolute;
-    background:#5264AE; 
-    transition:0.2s ease all; 
-    -moz-transition:0.2s ease all; 
-    -webkit-transition:0.2s ease all;
-  }
-  .bar:before {
-    left:50%;
-  }
-  .bar:after {
-    right:50%; 
-  }
-
-  /* active state */
-  input:focus ~ .bar:before, input:focus ~ .bar:after {
-    width:50%;
-  }
-
-  /* HIGHLIGHTER ================================== */
-  .highlight {
-    position:absolute;
-    height:60%; 
-    width:100px; 
-    top:25%; 
-    left:0;
-    pointer-events:none;
-    opacity:0.5;
-  }
-
-  /* active state */
-  input:focus ~ .highlight {
-    -webkit-animation:inputHighlighter 0.3s ease;
-    -moz-animation:inputHighlighter 0.3s ease;
-    animation:inputHighlighter 0.3s ease;
-  }
-
-  /* ANIMATIONS ================ */
-  @-webkit-keyframes inputHighlighter {
-    from { background:#5264AE; }
-    to 	{ width:0; background:transparent; }
-  }
-  @-moz-keyframes inputHighlighter {
-    from { background:#5264AE; }
-    to 	{ width:0; background:transparent; }
-  }
-  @keyframes inputHighlighter {
-    from { background:#5264AE; }
-    to 	{ width:0; background:transparent; }
-  }
-}
-//done
+// .port {
+// text-align: center;
+// padding-bottom: 3em;
+// display: block;
+//   li {
+//     display: inline;
+//     padding-right: 2.7em;
+//   }
+// }
