--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -2,7 +2,7 @@
 @use '../abstracts/mixins';
 
 .logo {
-  background-image: url("../../assets/logo.png");
+  background-image: url("../../assets/MANNYBOULPFP.png");
   background-size: contain;
   background-position: center;
   height: 40px;
@@ -11,22 +11,6 @@
   padding: 0;
   margin: 0;
 }
-header {
-  svg {
-    @include mixins.svg(3em, 3em, variables.$primary-color, variables.$primary-color);
-  }
-}
-// .pics {
-//   background-image: url("../../assets/header.png");
-//   background-size: contain;
-//   background-position: center;
-//   height: 175px;
-//   width: 300px;
-//   background-repeat: no-repeat;
-//   padding: 0;
-//   margin: 0;
-// }
-
 .head-shot {
   background-image: url("../../assets/zoro-pic.png");
   background-size: contain;
