--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -12,6 +12,7 @@
   margin: 0;
 }
 .head-shot {
+  display: block;
   background-image: url("../../assets/zoro-pic.png");
   background-size: contain;
   background-position: center;
