--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,7 +1,7 @@
 @forward 'nav';
 @forward 'article';
 @forward 'buttons';
-@forward 'label';
+// @forward 'label';
 @forward 'images';
 @forward 'cards';
 @forward 'forms';
