--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,1 +1,7 @@
-@forward 'home';
+// @forward 'home';
+// @forward 'variables';
+// @forward 'colors';
+// @forward 'functions';
+// @forward 'breakpoints';
+// @forward 'mixins';
+// idk man
