--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,7 +1,1 @@
-// @forward 'home';
-// @forward 'variables';
-// @forward 'colors';
-// @forward 'functions';
-// @forward 'breakpoints';
-// @forward 'mixins';
-// idk man
+@forward 'home';
