--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@
   margin: 0;
 }
 
-.projects img {
+img {
   width: 400px;
   height: 300px;
 }
@@ -174,6 +174,17 @@ label {
   grid-gap: 2em 0;
 }
 
+@media (max-width: 1713px) {
+  .projects {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 2em 2em;
+  }
+  .projects img {
+    height: 100%;
+    width: 100%;
+  }
+}
 @media (max-width: 1545px) {
   .aboutme1 {
     justify-content: center;
@@ -198,28 +209,48 @@ label {
     width: 70vw;
     padding: 0;
   }
-}
-@media (max-width: 866px) {
-  .info {
-    padding-bottom: 2em;
-  }
-  .info ul {
-    display: block;
-  }
-  .info li {
-    padding-bottom: 1em;
-  }
-  .info .list {
-    display: inline-block;
-    min-width: none;
-  }
-  .info .fact {
-    display: inline-block;
-    padding-left: 1em;
-    color: grey;
-  }
   .cards {
-    font-size: 0.7em;
+    font-size: 0.85em;
+  }
+  .projects, .cards, .info {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+  }
+  .projects img, .cards img, .info img {
+    width: 400px;
+    height: 300px;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+  }
+  .li {
+    display: flex;
+  }
+  .list {
+    max-width: 100px;
+  }
+}
+@media (max-width: 706px) {
+  .header, .hero, label, .work, .services, .skills, .test, .contact, .aboutme1 {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+  .head {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    text-align: center;
+  }
+  .aboutme1 {
+    display: block;
+    justify-content: center;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    width: auto;
+  }
+  .head {
+    width: auto;
   }
 }
 .download, .message-me {
@@ -230,6 +261,7 @@ label {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-bottom: 1.5em;
 }
 
 .button-area {
@@ -258,7 +290,7 @@ label {
 /* NEW FOOTER CONTACT FORM */
 .wrapper {
   margin: auto;
-  width: 715px;
+  width: auto;
   /* background: #fff; */
   border-radius: 5px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
@@ -267,7 +299,7 @@ label {
   font-size: 22px;
   font-weight: 600;
   padding: 20px 30px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #FF3F3F;
 }
 .wrapper form {
   margin: 35px 30px;
