--- a/src/sass/abstracts/_breakpoints.scss
+++ b/src/sass/abstracts/_breakpoints.scss
@@ -1,6 +1,19 @@
 @use '../components/images';
 @use '../layout/home';
+@use 'mixins';
 //not finished
+
+@media (max-width: 1713px) {
+  .projects {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr ;
+    grid-gap: 2em 2em;
+    img {
+      height: 100%;
+      width: 100%;
+    }
+  }
+}
 @media (max-width: 1545px) { 
     .aboutme1  {
         justify-content:center ;
@@ -29,32 +42,88 @@
         width: 70vw;
         padding: 0;
     }
-}
-
-@media (max-width: 866px) {
-    .info {
-        padding-bottom: 2em;
-        ul {
-            display: block;
-        }
-        li {
-          padding-bottom: 1em;
-        }
-        .list {
-          display: inline-block;
-          min-width: none;
-        }
-        .fact {
-          display: inline-block;
-          padding-left: 1em;
-          color: grey;
-        }
+    .cards {
+      font-size: .85em;
+    }
+    .projects, .cards, .info {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-auto-flow: row;
+      img {
+        @include mixins.img();
+        margin: auto;
+        height: 100%;
+        width: 100%;
       }
-      .cards {
-        font-size: .7em;
-      }
+    }
+    .li {
+      display: flex;
+    }
+    .list {
+      max-width: 100px;
+    }
 }
 
-@media (max-width: 716px) {
+// @media (max-width: 866px) {
+//     .info {
+//         padding-bottom: 2em;
+//         ul {
+//             display: block;
+//         }
+//         li {
+//           padding-bottom: 1em;
+//         }
+//         .list {
+//           display: inline-block;
+//           min-width: none;
+//         }
+//         .fact {
+//           display: inline-block;
+//           padding-left: 1em;
+//           color: grey;
+//         }
+//       }
 
+//       .cards {
+//         font-size: .7em;
+//       }
+// }
+//about me 
+@media (max-width: 706px) {
+  .header, .hero, label, .work, .services, .skills, .test, .contact, .aboutme1 {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+  .head{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+    text-align: center;
+  }
+  .aboutme1 {
+    display: block;
+    justify-content: center;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    width: auto;
+  }
+  .head {
+    width: auto;
+  }
+  // .projects, .cards, .info {
+  //   display: grid;
+  //   grid-template-columns: 1fr;
+  //   grid-auto-flow: row;
+  //   img {
+  //     @include mixins.img();
+  //     margin: auto;
+  //   }
+  // }
+  // .li {
+  //   display: flex;
+  // }
+  // .list {
+  //   max-width: 100px;
+  // }
 }
+
