--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -10,6 +10,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-bottom: 1.5em;
 }
 
 //page padding
@@ -39,6 +40,13 @@
   width: 400px;
   height: 300px;
 }
+
+@mixin img-media() {
+  width: auto;
+  height: auto;
+}
+
+
 
 // breakpoints
 @mixin for-size($size) {
