--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -1,7 +1,10 @@
+@use '../abstracts/_variables';
+
 /* NEW FOOTER CONTACT FORM */
 .wrapper{
     margin:auto;
-    width: 715px;
+    width: auto;
+    // width: 715px;
     /* background: #fff; */
     border-radius: 5px;
     box-shadow: 10px 10px 10px rgba(0,0,0,0.05);
@@ -9,7 +12,7 @@
     font-size: 22px;
     font-weight: 600;
     padding: 20px 30px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid variables.$accent;
     }
     form {
     margin: 35px 30px;
